<resources>
    <string name="app_name">Whatapp-Download</string>
    <string name="saved_files">Saved Files</string>
    <string name="no_files_found">No Files Found</string>
    <string name="gautham">Gautham</string>
    <string name="app_version">App Version</string>
    <string name="mail_id">gauthamnadar12@gmail.com</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="telegram_link">https://t.me/Mellow04</string>
    <string name="developer">Developer</string>
    <string name="check_for_update">Check for update</string>
    <string name="cant_find_whatsapp_dir">Cant find WhatsApp Dir</string>

    //menu
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About</string>
</resources>