<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:binding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fbdownload.ui.home.HomeViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#403E3E"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabTextAppearance="@style/MyCustomTextAppearance" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_anchor="@id/tabs"
                app:layout_anchorGravity="bottom" />
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:background="@drawable/ic_bg_drawer_layout"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="52dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:text="@string/check_for_update"
                        android:textColor="#484848"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EBEBEB" />

                    <TextView
                        android:id="@+id/menu_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:text="@string/rate_us"
                        android:textColor="#484848"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EBEBEB" />

                    <TextView
                        android:id="@+id/menu_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:text="@string/share_app"
                        android:textColor="#484848"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EBEBEB" />

                    <TextView
                        android:id="@+id/menu_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:text="@string/privacy_policy"
                        android:textColor="#484848"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EBEBEB" />

                    <TextView
                        android:id="@+id/menu_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="bottom"
                        android:text="@string/about_us"
                        android:textColor="#484848"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>